# scrapeRAG

./: CLAUDE.md  README.md  pyproject.toml
scraperag/: cli.py  crawler.py  dedup.py  extractor.py  pdf.py  pipeline.py  writer.py
