[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraperag"
version = "0.1.0"
description = "Transform HTML doc dumps into clean Markdown for RAG systems"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.13",
    "tqdm>=4.66",
    "chardet>=5.2",
]

[project.scripts]
scraperag = "scraperag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scraperag"]
